## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = liblinuxpwm.la


liblinuxpwm_la_SOURCES = \
	lib.c

liblinuxpwm_la_LDFLAGS = 

liblinuxpwm_la_LIBADD = 



include_HEADERS = \
	liblinuxpwm.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = liblinuxpwm.pc

EXTRA_DIST = \
	liblinuxpwm.pc.in
